feat: integrate Google Analytics tracking for route changes and add gtag.js script

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,16 @@
     content="Portfolio of Vishal Bhurke, specialized in Angular and modern frontend solutions.">
   <meta property="og:url" content="https://vishal-bhurke.netlify.app/">
   <meta property="og:type" content="website">
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VHJTF4GGVK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-VHJTF4GGVK');
+  </script>
 </head>
 
 <body>
